# olivier

./: README.md  pyproject.toml  requirements.txt
lib/: README.md  pyproject.toml
lib/olivier/: api_grist.py  commandes_factures.py  emailing.py  entrees_sorties.py  factures_grist.py  filtres_reception_facture.py  olivier.py  outils.py  traite_factures_grist.py
olivier/: api_grist.py  commandes_factures.py  emailing.py  entrees_sorties.py  filtres_reception_facture.py  outils.py  tiers.py  traite_factures_grist.py
tests/: test_api_grist.py  test_entrees_sorties.py  test_filtres_reception_facture.py  test_outils.py
